--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ main {
   max-height: 95vh;
   margin: 0;
   border-radius: 8px;
-  overflow: visible;
+  overflow: hidden;
   box-shadow: 0 18px 45px rgba(0, 0, 0, 0.55);
   background-color: #000000;
   display: block;
@@ -176,8 +176,6 @@ main {
 .lightbox-nav {
   position: absolute;
   top: 50%;
-  left: auto;
-  right: auto;
   transform: translateY(-50%);
   width: 50px;
   height: 50px;
@@ -193,6 +191,9 @@ main {
   transition: background-color 0.2s ease, opacity 0.2s ease;
   z-index: 15;
   opacity: 0.7;
+  line-height: 1;
+  padding: 0;
+  margin: 0;
 }
 
 .lightbox-nav:hover {
@@ -201,11 +202,32 @@ main {
 }
 
 .lightbox-nav-prev {
-  left: 1rem;
+  left: calc(50vw - 700px - 100px);
 }
 
 .lightbox-nav-next {
-  right: 1rem;
+  right: calc(50vw - 700px - 100px);
+}
+
+/* 작은 화면에서는 화살표를 라이트박스 근처에 배치 */
+@media (max-width: 1800px) {
+  .lightbox-nav-prev {
+    left: calc(2.5vw - 100px);
+  }
+
+  .lightbox-nav-next {
+    right: calc(2.5vw - 100px);
+  }
+}
+
+@media (max-width: 1200px) {
+  .lightbox-nav-prev {
+    left: 1rem;
+  }
+
+  .lightbox-nav-next {
+    right: 1rem;
+  }
 }
 
 .lightbox-close {
